--- a/go-app/chat/index.html
+++ b/go-app/chat/index.html
@@ -5,8 +5,22 @@
     <title>bChat</title>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="/chat/app.js"></script>
 
+	<script src="/js/closure-library/closure/goog/base.js"></script>
+
+	<script src="/js/proto/constants.js"></script>
+  	<script src="/js/proto/arith.js"></script>
+  	<script src="/js/proto/utils.js"></script>
+  	<script src="/js/proto/map.js"></script>
+  	<script src="/js/proto/decoder.js"></script>
+  	<script src="/js/proto/encoder.js"></script>
+    <script src="/js/proto/reader.js"></script>
+  	<script src="/js/proto/writer.js"></script>
+  	<script src="/js/proto/message.js"></script>
+
+
+    <script src="/chat/chat_pb.js"></script>
+    <script src="/chat/app.js"></script>
 </head>
 
 <body>
