--- a/go-app/webgl/index.html
+++ b/go-app/webgl/index.html
@@ -8,7 +8,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="js/three.js"></script>
+		<script src="../js/three.js"></script>
 		<script>
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
@@ -25,15 +25,35 @@
 			camera.position.z = 5;
 
 			const animate = function () {
-				requestAnimationFrame( animate );
-
 				cube.rotation.x += 0.01;
 				cube.rotation.y += 0.01;
 
 				renderer.render( scene, camera );
+				requestAnimationFrame( animate );
 			};
 
 			animate();
+
+			document.onkeydown = checkKey;
+
+			function checkKey(e) {
+
+			    e = e || window.event;
+
+			    if (e.keyCode == '38') {
+			        // up arrow
+			    }
+			    else if (e.keyCode == '40') {
+			        // down arrow
+			    }
+			    else if (e.keyCode == '37') {
+			       cube.position.x -= 0.1;
+			    }
+			    else if (e.keyCode == '39') {
+			       cube.position.x += 0.1;
+			    }
+
+			}
 		</script>
 	</body>
 </html>
